@@ -5,14 +5,14 @@ AUX quassel.logrotate 105 SHA256 00c32e857d7a4346d09ac057768565692da9cacf41ed37c
 AUX quasselcore.conf 714 SHA256 16cfaf919268ee3c3281fc4ad0dfc128b1c98f5edfc5cc522addd512f36d293c SHA512 e03df342f47945f948106883a7757262ab7a8a7d21f0b4dd01cfcc95e836c2e00f2e0177a353b4f7a4b6f80ffa970be06d49aa9a42cad1f3834382267e5a0d7f WHIRLPOOL d1054f5ee635579b0a41fbbf025ba5202d57288a236afb62230da165b91499598f88b7fbbbe46560843338fb2a0fa30b38eb0205b71e8f0e8894a6c53e5b92ec
 AUX quasselcore.init 1857 SHA256 af041a6c800ffb443d008b861c639bf32580b3655f7db3bc00db833374af6b2e SHA512 0405af90fe65589e163d6b2470ea4d4d3b8dad49ee3b89caba9bcffd7186bd92f204da4f8404e5ed489a949fc89b898f0b94c94c8382f90f89ccda5e2b8e2382 WHIRLPOOL 7fefa3e977f5edce047c8f928e52b3dfc702a151930a92365be7d9eb0e88adffa924164e080bf8170dfb4a95c357cb9b059394d3854464f93d58f577ecea41de
 DIST quassel-0.8.0.tar.bz2 2663465 SHA256 a3515bd18e2b100eb9a72480e76b1faefaa5e84cdb236b6af1f05b477a1e9071 SHA512 36a9395d7706f771d5477c233aec49fdd94b9b3c3bf723025b77ce299d05c36fa672ab178863aef5c1b8e5ca9500dd73094af3754c9f14d4b4b5274cd7ee909c WHIRLPOOL 99f44cd09f5913834f6558f144083b77d0bd2636e1ea3c09edd0434b664d16e54859ba1da7b14bbb5bc33aa14364a479de2db7ed7a6d75fa8d154ae6e5b9f45e
-EBUILD quassel-0.8.0.ebuild 5079 SHA256 8adc1c54000d643a2e1708f588f4dc554b25e4f923b4a02995940e43874d3539 SHA512 40fc69c09c3600be5e8cbc2c34ff49e38b40df858458109ef9d567092d5911671c6bb626f9c0af72df4a302b2394b313c7dfd8c0c8a630051e55bf2b81f684e5 WHIRLPOOL d72757ef2851ad8e13339271e9b48f65e384c21bbe0aa79272523e8badc06926fc0126ae47b67a00823b95a5f92471f1aa6ea65ea9122201d318cb5c5e04ad73
-EBUILD quassel-9999.ebuild 5105 SHA256 c47735b133dcaf36d05766f57381c00922c0e5d089049c5729107ef97f9dcf76 SHA512 36cf5802977c4412f20e379eb914fffd0c3b2e6c495eb09c95d598764bd5cc41c367f19eef3d577c4571f9d00f1c2afccb785fc1af96a5e3dd4c9d474900261d WHIRLPOOL 4573e091e9b65101cdae5eccd4362da8f0cdeb629a2ccc60513d9e9c4209a68e0ca1f5127ef069ae11c66ca703bd013157ec8298beffcdd36322935b3df2042c
-MISC ChangeLog 24137 SHA256 d99a026757bfcaba798773082848b6e8eced7d661ad250cb58b68ee432e4f58d SHA512 ed4fad83267ad1fad929de57e42f82154f9f222735efccdfcde5a3644f77f1a73726b90fe8c74f2710653f6e31b35fe0e8d89201a67eb75014e23d1d07686bda WHIRLPOOL 200b593f97ab728686036aaa1b4b71281a964686dbc9e0301329815520dd421e05bbb9af8f37f6bd4686e089cfdec999fa1f378e178b9ba080989b5b738a2da1
+EBUILD quassel-0.8.0.ebuild 5072 SHA256 2bb6fd7fa52dbc235442bcae4f8c0385a71dd1e892d5fcb7d81e482e39df0495 SHA512 f179ec8ffce87e494db8793ee13faa16b3c0b8771462038d0387699dc0acefea19095955c605d8d19877a839191c30e81493262293774516afa1ee7edf3b2afc WHIRLPOOL 1efe3af41667405431097343854beeace2a895c446a800fd20ea07dd93d6cc5c495b9e4ab3d63484430dbdb65fab19c2998b6b3fa79426bc9f34ed56ae6b1171
+EBUILD quassel-9999.ebuild 5098 SHA256 83997217a9cd013981dfcc9017fc5bfda534c5054fdaf3e970e16f6fec170603 SHA512 d2b69d3da56435ec854d62b2a44bd3962f3b9b0d18b265b83ffdcdc72c23df2787719678427b5cbe930a4794bf346a83dbc6702ab9ac11a4776099a34d15a224 WHIRLPOOL 7716e66faed0c7da4d21339d767c96463670bb878c04dce8a051c75210f23dcf24730293bb8c4bfef191eec4577e768e9bab420626900285029f49d7ac820c24
+MISC ChangeLog 24265 SHA256 30efb216d20e994ea245b1f82e43378890db4fb5bfa2946caac981f1bfd447a6 SHA512 ec1377e835a82207125e6cc0a2e2e49f3a90ef565c4f8e7caed5797bc83ef3c52b89d538b834621f0774f40637f8b26e45c0401fd1d540a686971c57219ec6b1 WHIRLPOOL 70b43172dd9fb59bd3c551dc0392cc7bcb9a3bbd13618b9d8e9919d475653342bd263a78dfac2cf9ae3f26919f46e4c53def094d7d5d547069d5274e8e62f74c
 MISC metadata.xml 1595 SHA256 57553131f53d0e797e4eaece5861a6a3e367c62b5f0b3b81f0a92a040fbd37b7 SHA512 a917e0badcabfa0ebde851a6abbbcab2fdf8ef4803c3527381b6161b1ece72f4f0282494948b0fc380be76495b520fb02e1bda36da48a4f80c3914e20800cb28 WHIRLPOOL 1bd4951fdaf8ae1f244f83a2d93b464f1bf22778fbd67af26048070b3ff5b6f2e964c55dc451f350faaabf1722889cfaa5db582e44932119dfe0229a1ef4cb9c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlFZZq4ACgkQWunnsum7y6h6FwCfeYXUOlKoTnp+hRPtEEpU28Vi
-IlAAn2mM2MweR5U4TPkTh2wocJPmd+1m
-=Zs8u
+iF4EAREIAAYFAlFh5PsACgkQC77qH+pIQ6Ti8QEAqm8+3DS22VjRiLZkGrZ2eOx/
+P+L4Uf1xcVMjfarfgKYBAILZzgrvZITYr7a1N6soOXEWZI+okJ7M4AQ9WQohbARD
+=4NoZ
 -----END PGP SIGNATURE-----
