@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/quassel
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.147 2013/04/01 10:54:16 vincent Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.148 2013/04/07 21:28:23 floppym Exp $
+
+  07 Apr 2013; Mike Gilbert <floppym@gentoo.org> quassel-0.8.0.ebuild,
+  quassel-9999.ebuild:
+  Don't die on pax-mark failure.
 
   01 Apr 2013; Vicente Olivert Riera <vincent@gentoo.org> quassel-0.8.0.ebuild:
   ppc stable, wrt bug #463740
